# TagHound

./: .gitignore  CHANGELOG.md  Justfile  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: dummy.py  profile_scalar_methods.py  profile_vector_methods.py  test_benchmarks.py  workload.py
examples/greek_gods/: attribute_tags.py  data.csv  rules.yml
profiling/: dummy.py  profile_scalar_methods.py  profile_vector_methods.py
taghound/: __init__.py  constants.py  exceptions.py  models.py  serializers.py  taghound.py
taghound/scalar/: __init__.py  function_builder.py  operators.py
taghound/vector/: __init__.py  function_builder.py
tests/: context.py  test_scalar_functions.py  test_taghound.py  test_vector_functions.py
