[project]
name = "taghound"
version = "0.2.0"
description = "TagHound: A Python library for managing and evaluating tag rules using scalar and vector operations. Supports YAML and JSON rule loading."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Roman Zagrebnev" }]
keywords = ["tags", "rules", "YAML", "JSON", "Python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0.2",
    "pandas>=2.2.3,<3",
]

[project.urls]
Homepage = "https://github.com/rzagreb/TagHound"
Repository = "https://github.com/rzagreb/TagHound"
Documentation = "https://github.com/rzagreb/TagHound#readme"
Changelog = "https://github.com/rzagreb/TagHound/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.18",
]
profiling = [
    "line-profiler==5.0.2",
    "memray==1.19.3",
    "pytest-benchmark==5.2.3",
]

[tool.uv]
# Cap transitives to releases at least 30 days old (dependency soak window)
constraint-dependencies = [
    "numpy<=2.4.6",
    "pillow<=12.2.0",
    "typing-extensions<=4.15.0",
    "tzdata<=2026.2",
]

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests", "taghound"]
pythonpath = ["."]
addopts = "--doctest-modules"

[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"
